--- a/conf/config.toml
+++ b/conf/config.toml
@@ -1,2 +1,4 @@
-URL = "https://cs.jicanchu.net/"
+Host = "https://cs.jicanchu.net/"
 TOKEN_KEY = "PmToken"
+JSON_PATH = "json/"
+JSON_ROUTE_PATH = "route/"
