--- a/conf/config.toml
+++ b/conf/config.toml
@@ -2,3 +2,4 @@ Host = "https://cs.jicanchu.net/"
 TOKEN_KEY = "PmToken"
 JSON_PATH = "json/"
 JSON_ROUTE_PATH = "route/"
+JSON_GROUP_ROUTE_PATH = "group_route/"
