--- a/conf/config.toml
+++ b/conf/config.toml
@@ -3,3 +3,4 @@ TOKEN_KEY = "PmToken"
 JSON_PATH = "json/"
 JSON_ROUTE_PATH = "route/"
 JSON_GROUP_ROUTE_PATH = "group_route/"
+SQLCONN = "jcc:jcc@tcp(172.16.0.203:3306)/city_debug"
